--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "eslint": "^8.45.0",
         "eslint-plugin-vue": "^9.15.1",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.27",
+        "tailwindcss": "^3.3.3",
         "vite": "^4.0.0",
         "vue": "^3.3.4"
     },
