--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,15 +1,9 @@
 {
     "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@/*": [
-          "resources/js/*"
-        ]
-      },
-      "jsx": "preserve",
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["resources/js/*"]
+        }
     },
-    "exclude": [
-      "node_modules",
-      "public"
-    ]
-  }
+    "exclude": ["node_modules", "public"]
+}
