--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^4.2.3",
-        "autoprefixer": "^10.4.14",
+        "@inertiajs/vue3": "^1.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "eslint": "^8.45.0",
         "eslint-plugin-vue": "^9.15.1",
         "laravel-vite-plugin": "^0.7.5",
-        "postcss": "^8.4.27",
-        "tailwindcss": "^3.3.3",
+        "postcss": "^8.4.18",
+        "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
-        "vue": "^3.3.4"
+        "vue": "^3.2.41"
     },
     "dependencies": {
         "@inertiajs/vue3": "^1.0.9"
