--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "axios": "^1.1.2",
         "eslint": "^8.45.0",
         "eslint-plugin-vue": "^9.15.1",
+        "laravel-echo": "^1.15.2",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.18",
+        "pusher-js": "^8.3.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
