--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
         "pusher-js": "^8.3.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
-        "vue": "^3.2.41"
+        "vue": "^3.3.4"
     },
     "dependencies": {
+        "@chenfengyuan/vue-countdown": "^2.1.1",
         "@inertiajs/vue3": "^1.0.9",
         "chart.js": "^4.3.0",
         "vue-chartjs": "^5.2.0"
